--- a/yolov1.ipynb
+++ b/yolov1.ipynb
@@ -107,24 +107,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess_img (img, resize):\n",
-    "    img_resized = cv2.resize(img, (resize, resize)) # 448*448*3 phù hợp với đầu vào vgg16\n",
-    "    img_normalized = img_resized/255.0\n",
-    "    return img_normalized\n",
-    "\n",
-    "def convert_to_label_yolo (annotations):\n",
-    "    yolo_labels = []\n",
+    "def preprocess_img (annotations, resize):\n",
+    "    preprocessed_img = []\n",
     "    for annotation in annotations:\n",
     "        img = cv2.imread(f\"./data/fire/train/{annotation[0]}\")\n",
-    "        img = preprocess_img(img, 448) # chuẩn hóa\n",
+    "        resized_img = cv2.resize(img, (resize, resize)) # 448*448*3 phù hợp với đầu vào vgg16\n",
+    "        normalized_img = resized_img/255.0\n",
+    "        preprocessed_img.append(normalized_img, annotation[1:])\n",
+    "    return preprocessed_img\n",
+    "\n",
+    "def convert_to_label_yolo (annotations, S, resize):\n",
+    "    yolo_labels = []\n",
+    "    normalized_img = preprocess_img(annotations, resize)\n",
+    "    for img in normalized_img:\n",
     "        w, h = img.shape[:2]\n",
-    "        x_min, y_min, x_max, y_max = annotation[1:5]\n",
-    "        x_center = ((x_min + x_max) / 2) / w\n",
-    "        y_center = ((y_min + y_max) / 2) / h\n",
+    "        x_min, y_min, x_max, y_max = img[1:5] # 2 góc của đối tượng trong ảnh cũ\n",
+    "        x_center = ((x_min + x_max) / 2 / w)\n",
+    "        y_center = ((y_min + y_max) / 2 / h)\n",
     "        w_bb = (x_max - x_min) / w\n",
     "        h_bb = (y_max - y_min) / h\n",
-    "        label = annotation[5]\n",
-    "        yolo_labels.append(label, x_center, y_center, w_bb, h_bb)"
+    "        label = img[5]\n",
+    "        yolo_labels.append(1, x_center, y_center, w_bb, h_bb, label)"
    ]
   },
   {
@@ -171,14 +174,14 @@
     "            torch.nn.Linear(1024 * 14 * 14, 4096), # kích thước feature map 14*14\n",
     "            torch.nn.Dropout(0.5),\n",
     "            torch.nn.LeakyReLU(0.1),\n",
-    "            torch.nn.Linear(4096, 7 * 7 * 30)\n",
+    "            torch.nn.Linear(4096, 7 * 7 * 12) # lưới 7*7*(2 lớp + 5 tham số * 2 boxes)\n",
     "        )\n",
     "    \n",
     "    def forward(self, x):\n",
     "        x = self.backbone(x)\n",
     "        x = self.conv_layers(x)\n",
     "        x = self.fc_layers(x)\n",
-    "        return x.view(-1, 7, 7, 30)"
+    "        return x.view(-1, 7, 7, 12)"
    ]
   },
   {
@@ -195,7 +198,33 @@
    "id": "02169da6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_obj_mask(obj_mask, target_boxes):\n",
+    "    cell_x = (target_boxes[..., 0])\n",
+    "\n",
+    "def loss(preds, targets, lambda_coord=5, lambda_noobj=0.5):\n",
+    "    \"\"\"\n",
+    "    Hàm loss cho YOLOv1.\n",
+    "    Args:\n",
+    "        predictions (Tensor): Shape (batch, 7, 7, 12) - Dự đoán của mô hình.\n",
+    "        targets (Tensor): Shape (batch, 7, 7, 12) - Ground truth.\n",
+    "        lambda_coord (float): Trọng số cho localization loss.\n",
+    "        lambda_noobj (float): Trọng số cho confidence loss của box không có vật thể.\n",
+    "    Returns:\n",
+    "        total_loss (Tensor): Tổng loss.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    batch_size = preds.size[0]\n",
+    "    S = 7 # lưới\n",
+    "    B = preds.size[3] # anchor boxes mỗi cell\n",
+    "\n",
+    "    pred_boxes = preds[..., :10].view(batch_size, S, S, B, 5) # (x, y, w, h, conf) * 2\n",
+    "    target_boxes = targets[..., :10].view(batch_size, S, S, B, 5)\n",
+    "    pred_classes = preds[..., 10:]\n",
+    "    target_classes = targets[..., 10:]\n",
+    "\n",
+    "    obj_mask = "
+   ]
   },
   {
    "cell_type": "markdown",
