--- a/yolov1.ipynb
+++ b/yolov1.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "7302e5e9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "import cv2\n",
-    "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "import torchvision.models as models\n",
-    "from roboflow import Roboflow"
+    "import numpy as np\n",
+    "import cv2\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torchvision.models as models\n"
    ]
   },
   {
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e20e2823",
    "metadata": {},
    "outputs": [
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "6bebaa4c",
    "metadata": {},
    "outputs": [
@@ -75,7 +77,7 @@
        "(np.float64(-0.5), np.float64(415.5), np.float64(415.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -102,32 +104,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "65a9b469",
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess_img (annotations, resize):\n",
-    "    preprocessed_img = []\n",
     "    for annotation in annotations:\n",
     "        img = cv2.imread(f\"./data/fire/train/{annotation[0]}\")\n",
-    "        resized_img = cv2.resize(img, (resize, resize)) # 448*448*3 phù hợp với đầu vào vgg16\n",
+    "        resized_img = cv2.resize(img, (resize, resize))\n",
     "        normalized_img = resized_img/255.0\n",
-    "        preprocessed_img.append(normalized_img, annotation[1:])\n",
-    "    return preprocessed_img\n",
     "\n",
-    "def convert_to_label_yolo (annotations, S, resize):\n",
+    "def convert_to_label_yolo (annotations, S=7, resize=448, num_classes=2):\n",
     "    yolo_labels = []\n",
-    "    normalized_img = preprocess_img(annotations, resize)\n",
-    "    for img in normalized_img:\n",
-    "        w, h = img.shape[:2]\n",
-    "        x_min, y_min, x_max, y_max = img[1:5] # 2 góc của đối tượng trong ảnh cũ\n",
+    "    for annotation in annotations:\n",
+    "        label_tensor = np.zeros((S, S, 2 * 5 + num_classes))\n",
+    "\n",
+    "        h = resize\n",
+    "        w = resize\n",
+    "        x_min, y_min, x_max, y_max, class_id = annotation[1:6] # 2 góc của đối tượng trong ảnh cũ\n",
     "        x_center = ((x_min + x_max) / 2 / w)\n",
     "        y_center = ((y_min + y_max) / 2 / h)\n",
     "        w_bb = (x_max - x_min) / w\n",
     "        h_bb = (y_max - y_min) / h\n",
-    "        label = img[5]\n",
-    "        yolo_labels.append(1, x_center, y_center, w_bb, h_bb, label)"
+    "\n",
+    "        # ô lưới chứa tâm của đối tượng\n",
+    "        grid_x = int(x_center * S)\n",
+    "        grid_y = int(y_center * S)\n",
+    "\n",
+    "        # tọa độ tương đối trong ô đó\n",
+    "        cell_x = x_center*S - grid_x\n",
+    "        cell_y = y_center*S - grid_y\n",
+    "\n",
+    "        # đánh dấu tâm đối tượng trong mạng lưới\n",
+    "        label_tensor[grid_y, grid_x, 0:5] = [cell_x, cell_y, w_bb, h_bb, 1]  # box 1\n",
+    "        label_tensor[grid_y, grid_x, 5:10] = [cell_x, cell_y, w_bb, h_bb, 1]  # box 2\n",
+    "        label_tensor[grid_y, grid_x, 10 + int(class_id)] = 1 \n",
+    "        # đánh dấu cho 1 đối tượng trong ảnh?\n",
+    "\n",
+    "        yolo_labels.append(label_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "656a63fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 7 is out of bounds for axis 1 with size 7",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m target \u001b[38;5;241m=\u001b[39m \u001b[43mconvert_to_label_yolo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mannotations_train\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[19], line 29\u001b[0m, in \u001b[0;36mconvert_to_label_yolo\u001b[1;34m(annotations, S, resize, num_classes)\u001b[0m\n\u001b[0;32m     26\u001b[0m cell_y \u001b[38;5;241m=\u001b[39m y_center\u001b[38;5;241m*\u001b[39mS \u001b[38;5;241m-\u001b[39m grid_y\n\u001b[0;32m     28\u001b[0m \u001b[38;5;66;03m# đánh dấu tâm đối tượng trong mạng lưới\u001b[39;00m\n\u001b[1;32m---> 29\u001b[0m \u001b[43mlabel_tensor\u001b[49m\u001b[43m[\u001b[49m\u001b[43mgrid_y\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrid_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m [cell_x, cell_y, w_bb, h_bb, \u001b[38;5;241m1\u001b[39m]  \u001b[38;5;66;03m# box 1\u001b[39;00m\n\u001b[0;32m     30\u001b[0m label_tensor[grid_y, grid_x, \u001b[38;5;241m5\u001b[39m:\u001b[38;5;241m10\u001b[39m] \u001b[38;5;241m=\u001b[39m [cell_x, cell_y, w_bb, h_bb, \u001b[38;5;241m1\u001b[39m]  \u001b[38;5;66;03m# box 2\u001b[39;00m\n\u001b[0;32m     31\u001b[0m label_tensor[grid_y, grid_x, \u001b[38;5;241m10\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mint\u001b[39m(class_id)] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \n",
+      "\u001b[1;31mIndexError\u001b[0m: index 7 is out of bounds for axis 1 with size 7"
+     ]
+    }
+   ],
+   "source": [
+    "target = convert_to_label_yolo(annotations_train)"
    ]
   },
   {
@@ -194,24 +232,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "7a29eb59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_iou(box1, box2):\n",
+    "    # box1: Tensor shape (N, 4), N là số lượng ô có object\n",
+    "    # box format: (xc, yc, w, h)\n",
+    "    box1_xy1 = box1[..., :2] - box1[..., 2:] / 2\n",
+    "    box1_xy2 = box1[..., :2] + box1[..., 2:] / 2\n",
+    "    box2_xy1 = box2[..., :2] - box2[..., 2:] / 2\n",
+    "    box2_xy2 = box2[..., :2] + box2[..., 2:] / 2\n",
+    "\n",
+    "    # Intersection\n",
+    "    inter_xy1 = torch.max(box1_xy1, box2_xy1)\n",
+    "    inter_xy2 = torch.min(box1_xy2, box2_xy2)\n",
+    "    inter_wh = (inter_xy2 - inter_xy1).clamp(min=0)\n",
+    "    inter_area = inter_wh[..., 0] * inter_wh[..., 1]\n",
+    "\n",
+    "    # Area\n",
+    "    box1_area = (box1_xy2[..., 0] - box1_xy1[..., 0]) * (box1_xy2[..., 1] - box1_xy1[..., 1])\n",
+    "    box2_area = (box2_xy2[..., 0] - box2_xy1[..., 0]) * (box2_xy2[..., 1] - box2_xy1[..., 1])\n",
+    "    union_area = box1_area + box2_area - inter_area\n",
+    "\n",
+    "    return inter_area / (union_area + 1e-6)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "02169da6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_obj_mask(obj_mask, target_boxes):\n",
-    "    cell_x = (target_boxes[..., 0])\n",
-    "\n",
-    "def loss(preds, targets, lambda_coord=5, lambda_noobj=0.5):\n",
+    "def yolo_loss(preds, targets, lambda_coord=5, lambda_noobj=0.5):\n",
     "    \"\"\"\n",
-    "    Hàm loss cho YOLOv1.\n",
-    "    Args:\n",
-    "        predictions (Tensor): Shape (batch, 7, 7, 12) - Dự đoán của mô hình.\n",
-    "        targets (Tensor): Shape (batch, 7, 7, 12) - Ground truth.\n",
-    "        lambda_coord (float): Trọng số cho localization loss.\n",
-    "        lambda_noobj (float): Trọng số cho confidence loss của box không có vật thể.\n",
-    "    Returns:\n",
-    "        total_loss (Tensor): Tổng loss.\n",
+    "    Hàm loss cho YOLOv1\n",
+    "    Đầu vào:\n",
+    "        predictions (Tensor): Shape (batch, 7, 7, 12) - Dự đoán của mô hình\n",
+    "        targets (Tensor): Shape (batch, 7, 7, 12) - Ground truth\n",
+    "        lambda_coord (float): Trọng số cho localization loss (tọa độ và kích thước có độ quan trọng lớn hơn)\n",
+    "        lambda_noobj (float): Trọng số cho confidence loss của box không có vật thể\n",
+    "    Đầu ra:\n",
+    "        total_loss (Tensor): Tổng loss\n",
     "    \"\"\"\n",
     "\n",
     "    batch_size = preds.size[0]\n",
@@ -223,7 +287,65 @@
     "    pred_classes = preds[..., 10:]\n",
     "    target_classes = targets[..., 10:]\n",
     "\n",
-    "    obj_mask = "
+    "    # đánh dấu ô lưới chứa đối tượng\n",
+    "    obj_mask = target_boxes[..., 0, 4] > 0\n",
+    "    noobj_mask = ~obj_mask\n",
+    "\n",
+    "    # gán trách nhiệm box cho ô chứa đối tượng dự đoán box nào có giá trị iou tốt nhất\n",
+    "    pred_box0 = pred_boxes[..., 0, :4][obj_mask]\n",
+    "    pred_box1 = pred_boxes[..., 1, :4][obj_mask]\n",
+    "    target_box = target_boxes[..., 0, :4][obj_mask]\n",
+    "    iou0 = compute_iou(pred_box0, target_box)\n",
+    "    iou1 = compute_iou(pred_box1, target_box)\n",
+    "\n",
+    "    responsible_mask = iou0 > iou1\n",
+    "\n",
+    "    pred_box = torch.where(\n",
+    "            responsible_mask.unsqueeze(-1),\n",
+    "            pred_box0,\n",
+    "            pred_box1\n",
+    "        )\n",
+    "    \n",
+    "    # 1. localization loss\n",
+    "    coord_loss = 0\n",
+    "    if obj_mask.sum() > 0:\n",
+    "        # sai số tọa độ\n",
+    "        xy_loss = F.mse_loss(pred_box[..., 0:2], target_box[..., 0:2], reduction='sum')\n",
+    "\n",
+    "        # sai số kích thước\n",
+    "        pred_wh = torch.sqrt(pred_box[..., 2:4].clamp(min=0))\n",
+    "        target_wh = torch.sqrt(target_box[..., 2:4])\n",
+    "        wh_loss = F.mse_loss(pred_wh, target_wh, reduction='sum')\n",
+    "\n",
+    "        coord_loss = lambda_coord * (xy_loss + wh_loss)\n",
+    "\n",
+    "    # 2. confidence loss\n",
+    "    # box chứa vật thể\n",
+    "    conf_obj_loss = 0\n",
+    "    if obj_mask.sum() > 0:\n",
+    "        pred_conf_obj = pred_box[..., 4]\n",
+    "        target_conf_obj = target_box[..., 4][obj_mask]\n",
+    "        conf_obj_loss = F.mse_loss(pred_conf_obj, target_conf_obj, reduction='sum')\n",
+    "\n",
+    "    # box không chứa vật thể (tất cả box) \n",
+    "    pred_conf_noobj = pred_boxes[..., :, 4][noobj_mask.unsqueeze(-1).expand(-1, -1, -1, B)].view(-1)\n",
+    "    target_conf_noobj = target_boxes[..., :, 4][noobj_mask.unsqueeze(-1).expand(-1, -1, -1, B)].view(-1)\n",
+    "    conf_noobj_loss = lambda_noobj * F.mse_loss(pred_conf_noobj, target_conf_noobj, reduction='sum')\n",
+    "\n",
+    "    confidence_loss = conf_obj_loss + conf_noobj_loss\n",
+    "\n",
+    "    # 3. class loss\n",
+    "    class_loss = 0\n",
+    "    if obj_mask.sum() > 0:\n",
+    "        pred_class = pred_classes[obj_mask]\n",
+    "        target_class = target_classes[obj_mask]\n",
+    "        class_loss = F.mse_loss(pred_class, target_class, reduction='sum')\n",
+    "\n",
+    "    # tổng loss\n",
+    "    total_loss = coord_loss + confidence_loss + class_loss\n",
+    "    total_loss /= batch_size  # Chuẩn hóa theo batch size\n",
+    "\n",
+    "    return total_loss"
    ]
   },
   {
@@ -256,18 +378,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fffa0c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = YOLOv1(backbone)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
+    "\n",
+    "epoch_losses = []\n",
+    "num_epochs = 20\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "    for images, targets in dataloader:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(images)\n",
+    "        loss = yolo_loss(outputs, targets)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        total_loss += loss.item()\n",
+    "    average_loss = total_loss / len(dataloader)\n",
+    "    epoch_losses.append(average_loss)\n",
+    "    print(f\"Epoch {epoch+1}/{num_epochs}, Loss: {average_loss}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27d05e84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), 'yolov1.pth')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "07743dad",
    "metadata": {},
    "source": [
     "## Test\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2f53af99",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
