biến đổi nhãn theo định dạng yolo

--- a/yolov1.ipynb
+++ b/yolov1.ipynb
@@ -56,6 +56,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# chuyển đổi nhãn phù hợp với định dạng yolo\n",
+    "def convert_labels_to_yolo_format (boxes, grid_size=7, num_classes = 2):\n",
+    "    label = torch.tensor((grid_size, grid_size, 5 * 2 + num_classes))\n",
+    "    \n",
+    "    for box in boxes:\n",
+    "        cls_id, x, y, w, h = box\n",
+    "        cell_x, cell_y = int(x * grid_size), int(y * grid_size) # ô chịu trách nhiệm có tâm đối tượng\n",
+    "        cell_x_frac, cell_y_frac = x * grid_size - cell_x, y * grid_size - cell_y\n",
+    "        label[cell_x, cell_y, :5] = torch.tensor((cell_x_frac, cell_y_frac, w, h, 1.0))\n",
+    "        label[cell_x, cell_y, 10 + int(cls_id)] = 1.0\n",
+    "\n",
+    "    return label\n",
+    "\n",
+    "# định nghĩa tập dữ liệu phù hợp với yolo\n",
     "class YoloDataset(Dataset):\n",
     "    def __init__ (self, img_dir, label_dir, transform=None, resize=(480, 480)):\n",
     "        self.img_dir = img_dir\n",
@@ -88,10 +102,10 @@
     "                for line in f:\n",
     "                    cls_id, x, y, w, h = map(float, line.strip().split()[:5])\n",
     "                    boxes.append([cls_id, x, y, w, h])\n",
-    "\n",
     "        boxes = torch.tensor(boxes, dtype=torch.float32) if boxes else torch.zeros((0, 5))\n",
+    "        yolo_target = convert_labels_to_yolo_format(boxes)\n",
     "\n",
-    "        return image, boxes"
+    "        return image, yolo_target"
    ]
   },
   {
@@ -121,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "3870ec57",
    "metadata": {},
    "outputs": [
@@ -145,6 +159,7 @@
     }
    ],
    "source": [
+    "# kiểm tra Dataloader\n",
     "images, targets = next(iter(train_loader))\n",
     "images = [img.to(device) for img in images]\n",
     "targets = [tgt.to(device) for tgt in targets]\n",
@@ -301,14 +316,14 @@
     "\n",
     "    batch_size = preds.size[0]\n",
     "    S = 7 # lưới\n",
-    "    B = preds.size[3] # anchor boxes mỗi cell\n",
+    "    B = 2 # anchor boxes mỗi cell\n",
     "\n",
     "    pred_boxes = preds[..., :10].view(batch_size, S, S, B, 5) # (x, y, w, h, conf) * 2\n",
     "    target_boxes = targets[..., :10].view(batch_size, S, S, B, 5)\n",
     "    pred_classes = preds[..., 10:]\n",
     "    target_classes = targets[..., 10:]\n",
     "\n",
-    "    # đánh dấu ô lưới chứa đối tượng\n",
+    "    # đánh dấu ô lưới chứa đối tượng \n",
     "    obj_mask = target_boxes[..., 0, 4] > 0\n",
     "    noobj_mask = ~obj_mask\n",
     "\n",
