tìm conf lớn nhất

--- a/yolov8/yolov8.ipynb
+++ b/yolov8/yolov8.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "d8146df5",
    "metadata": {
     "execution": {
@@ -2080,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "21dae3b6",
    "metadata": {},
    "outputs": [
@@ -2089,12 +2089,11 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0: 640x640 1 Fire, 25.2ms\n",
-      "1: 640x640 1 Fire, 25.2ms\n",
-      "2: 640x640 2 Fires, 25.2ms\n",
-      "3: 640x640 1 Fire, 25.2ms\n",
-      "Speed: 5.0ms preprocess, 25.2ms inference, 1.4ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "Results saved to \u001b[1mruns\\detect\\predict3\u001b[0m\n"
+      "0: 640x640 1 Fire, 1 Smoke, 22.9ms\n",
+      "1: 640x640 1 Fire, 22.9ms\n",
+      "2: 640x640 1 Fire, 1 Smoke, 22.9ms\n",
+      "3: 640x640 1 Fire, 22.9ms\n",
+      "Speed: 4.4ms preprocess, 22.9ms inference, 44.6ms postprocess per image at shape (1, 3, 640, 640)\n"
      ]
     }
    ],
@@ -2112,7 +2111,7 @@
     "    iou=0.5,\n",
     "    device=device,\n",
     "    stream=False,\n",
-    "    save=True\n",
+    "    save=False\n",
     ")"
    ]
   },
@@ -2145,6 +2144,139 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "569e28cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0: 640x640 1 Fire, 182.8ms\n",
+      "1: 640x640 2 Smokes, 182.8ms\n",
+      "2: 640x640 3 Fires, 3 Smokes, 182.8ms\n",
+      "3: 640x640 1 Fire, 182.8ms\n",
+      "4: 640x640 1 Fire, 182.8ms\n",
+      "5: 640x640 1 Fire, 182.8ms\n",
+      "6: 640x640 2 Fires, 182.8ms\n",
+      "7: 640x640 3 Fires, 182.8ms\n",
+      "8: 640x640 1 Fire, 182.8ms\n",
+      "9: 640x640 3 Fires, 182.8ms\n",
+      "10: 640x640 1 Smoke, 182.8ms\n",
+      "11: 640x640 1 Fire, 182.8ms\n",
+      "12: 640x640 1 Fire, 2 Smokes, 182.8ms\n",
+      "13: 640x640 1 Fire, 182.8ms\n",
+      "14: 640x640 1 Fire, 182.8ms\n",
+      "15: 640x640 1 Fire, 182.8ms\n",
+      "16: 640x640 1 Fire, 182.8ms\n",
+      "17: 640x640 1 Fire, 182.8ms\n",
+      "18: 640x640 1 Fire, 182.8ms\n",
+      "19: 640x640 1 Fire, 182.8ms\n",
+      "20: 640x640 1 Smoke, 182.8ms\n",
+      "21: 640x640 1 Smoke, 182.8ms\n",
+      "22: 640x640 3 Fires, 1 Smoke, 182.8ms\n",
+      "23: 640x640 1 Fire, 182.8ms\n",
+      "24: 640x640 1 Fire, 182.8ms\n",
+      "25: 640x640 1 Fire, 182.8ms\n",
+      "26: 640x640 1 Fire, 182.8ms\n",
+      "27: 640x640 1 Fire, 1 Smoke, 182.8ms\n",
+      "28: 640x640 1 Smoke, 182.8ms\n",
+      "29: 640x640 1 Fire, 182.8ms\n",
+      "30: 640x640 1 Fire, 182.8ms\n",
+      "31: 640x640 1 Fire, 182.8ms\n",
+      "32: 640x640 2 Fires, 182.8ms\n",
+      "33: 640x640 1 Fire, 1 Smoke, 182.8ms\n",
+      "34: 640x640 1 Fire, 182.8ms\n",
+      "35: 640x640 1 Fire, 182.8ms\n",
+      "36: 640x640 1 Fire, 182.8ms\n",
+      "37: 640x640 1 Fire, 182.8ms\n",
+      "38: 640x640 1 Fire, 182.8ms\n",
+      "39: 640x640 1 Smoke, 182.8ms\n",
+      "40: 640x640 1 Fire, 182.8ms\n",
+      "41: 640x640 1 Fire, 182.8ms\n",
+      "42: 640x640 1 Fire, 182.8ms\n",
+      "43: 640x640 3 Fires, 1 Smoke, 182.8ms\n",
+      "44: 640x640 1 Fire, 182.8ms\n",
+      "45: 640x640 2 Smokes, 182.8ms\n",
+      "46: 640x640 1 Fire, 182.8ms\n",
+      "47: 640x640 1 Smoke, 182.8ms\n",
+      "48: 640x640 1 Smoke, 182.8ms\n",
+      "49: 640x640 1 Smoke, 182.8ms\n",
+      "50: 640x640 1 Fire, 182.8ms\n",
+      "51: 640x640 3 Fires, 1 Smoke, 182.8ms\n",
+      "52: 640x640 1 Fire, 182.8ms\n",
+      "53: 640x640 1 Fire, 182.8ms\n",
+      "54: 640x640 1 Fire, 182.8ms\n",
+      "55: 640x640 1 Fire, 182.8ms\n",
+      "56: 640x640 2 Fires, 1 Smoke, 182.8ms\n",
+      "57: 640x640 1 Fire, 182.8ms\n",
+      "58: 640x640 1 Fire, 182.8ms\n",
+      "59: 640x640 1 Fire, 182.8ms\n",
+      "60: 640x640 1 Fire, 182.8ms\n",
+      "61: 640x640 1 Fire, 182.8ms\n",
+      "62: 640x640 1 Fire, 182.8ms\n",
+      "63: 640x640 1 Fire, 182.8ms\n",
+      "64: 640x640 1 Fire, 182.8ms\n",
+      "65: 640x640 1 Smoke, 182.8ms\n",
+      "66: 640x640 1 Fire, 182.8ms\n",
+      "67: 640x640 1 Fire, 182.8ms\n",
+      "68: 640x640 2 Fires, 182.8ms\n",
+      "69: 640x640 1 Fire, 182.8ms\n",
+      "70: 640x640 1 Fire, 182.8ms\n",
+      "71: 640x640 1 Fire, 182.8ms\n",
+      "72: 640x640 19 Fires, 182.8ms\n",
+      "73: 640x640 1 Fire, 182.8ms\n",
+      "74: 640x640 1 Fire, 182.8ms\n",
+      "75: 640x640 1 Fire, 182.8ms\n",
+      "76: 640x640 1 Fire, 182.8ms\n",
+      "77: 640x640 2 Fires, 1 Smoke, 182.8ms\n",
+      "78: 640x640 2 Fires, 182.8ms\n",
+      "79: 640x640 1 Fire, 182.8ms\n",
+      "80: 640x640 4 Fires, 3 Smokes, 182.8ms\n",
+      "81: 640x640 1 Fire, 182.8ms\n",
+      "82: 640x640 1 Fire, 182.8ms\n",
+      "83: 640x640 1 Fire, 182.8ms\n",
+      "84: 640x640 2 Fires, 1 Smoke, 182.8ms\n",
+      "85: 640x640 1 Smoke, 182.8ms\n",
+      "86: 640x640 1 Fire, 182.8ms\n",
+      "87: 640x640 1 Fire, 182.8ms\n",
+      "88: 640x640 4 Fires, 1 Smoke, 182.8ms\n",
+      "89: 640x640 1 Fire, 182.8ms\n",
+      "90: 640x640 1 Fire, 182.8ms\n",
+      "91: 640x640 1 Fire, 182.8ms\n",
+      "92: 640x640 1 Fire, 182.8ms\n",
+      "93: 640x640 1 Fire, 182.8ms\n",
+      "94: 640x640 1 Smoke, 182.8ms\n",
+      "95: 640x640 1 Fire, 182.8ms\n",
+      "96: 640x640 1 Fire, 182.8ms\n",
+      "97: 640x640 1 Fire, 182.8ms\n",
+      "98: 640x640 1 Fire, 182.8ms\n",
+      "99: 640x640 1 Fire, 182.8ms\n",
+      "Speed: 6.1ms preprocess, 182.8ms inference, 1.6ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "Max confidence: 0.9249322414398193\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tìm box có conf cao nhất\n",
+    "sample = random.sample(imgs, 100)\n",
+    "results = model.predict(\n",
+    "    source=sample,\n",
+    "    imgsz=640,\n",
+    "    conf=0.3,\n",
+    "    iou=0.5,\n",
+    "    device=device,\n",
+    "    stream=False,\n",
+    "    save=False\n",
+    ")\n",
+    "all_confs = [box.conf.item() for r in results for box in r.boxes]\n",
+    "\n",
+    "print(f'Max confidence: {max(all_confs)}')"
    ]
   }
  ],
